partie mobile Ok

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html manifest="" lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>InteractiveSport</title>
+    <title>Kctus</title>
     <style type="text/css">
          /**
          * Example of an initial loading indicator.
@@ -51,6 +51,11 @@
     </style>
     <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
+    <script type="text/javascript" src="libs/socket.io/socket.io.min.js"></script>
+    <script type="text/javascript">
+        var key         = window.location.hash.substring(1);
+        var serverio    = 'http://interactivesport.sharinvideo.com:1234';
+    </script>
 </head>
 <body>
     <div id="appLoadingIndicator">
