message si no key

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
     <script type="text/javascript" src="libs/socket.io/socket.io.min.js"></script>
     <script type="text/javascript">
-        var key         = window.location.hash.substring(1);
         var serverio    = 'http://interactivesport.sharinvideo.com:1234';
+        var urlClient   = 'http://interactivesport.sharinvideo.com';
     </script>
 </head>
 <body>
