maj constante pour kkuet.net

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
     <script type="text/javascript" src="libs/socket.io/socket.io.min.js"></script>
     <script type="text/javascript">
-        var serverio    = 'http://interactivesport.sharinvideo.com:1234';
-        var urlClient   = 'http://interactivesport.sharinvideo.com';
+        var serverio    = 'http://kctus.kkuet.net:1234';
+        var urlClient   = 'http://kctus.kkuet.net';
     </script>
 </head>
 <body>
